--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
+        "@hello-pangea/dnd": "^18.0.1",
         "@inertiajs/react": "^2.0.0",
         "@radix-ui/react-accordion": "^1.2.7",
         "@radix-ui/react-avatar": "^1.1.3",
