--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-dropzone": "^14.3.8",
+        "react-sortablejs": "^6.1.4",
         "sonner": "^2.0.3",
+        "sortablejs": "^1.15.6",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
