--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.6",
         "@tinymce/tinymce-react": "^6.1.0",
         "@tiptap/extension-image": "^2.11.7",
