--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,7 @@ jobs:
           php-version: 8.4
           tools: composer:v2
           coverage: xdebug
+          extensions: sqlite3, pdo_sqlite
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -45,11 +46,13 @@ jobs:
       - name: Copy Environment File
         run: cp .env.example .env
 
+      - name: Set Testing Environment
+        run: |
+          echo "DB_CONNECTION=sqlite" >> .env
+          echo "DB_DATABASE=:memory:" >> .env
+
       - name: Generate Application Key
         run: php artisan key:generate
-
-      - name: Create Database
-        run: touch database/database.sqlite
 
       - name: Run Migrations
         run: php artisan migrate --force
